@@ -172,7 +172,7 @@ public class OrientDBDocumentManagerTest {
         var entitySaved = entityManager.insert(entity);
         var id = entitySaved.find("name").get();
         var query = select().from(COLLECTION_NAME).where(id.name()).eq(id.get()).build();
-        var entityFound = entityManager.select(query).toList().get(0);
+        var entityFound = entityManager.select(query).toList().getFirst();
         var subDocument = entityFound.find("phones").get();
         List<Element> documents = subDocument.get(new TypeReference<>() {
         });
@@ -186,7 +186,7 @@ public class OrientDBDocumentManagerTest {
         var entitySaved = entityManager.insert(entity);
         Element id = entitySaved.find("name").get();
         var query = select().from(COLLECTION_NAME).where(id.name()).eq(id.get()).build();
-        var entityFound = entityManager.select(query).toList().get(0);
+        var entityFound = entityManager.select(query).toList().getFirst();
         var subDocument = entityFound.find("phones").get();
         List<Element> documents = subDocument.get(new TypeReference<>() {
         });
